--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,8 +1,12 @@
-<% provide(:title, 'Home') %>
 
-<h1>Spike App</h1>
-<p>
-	This is the home page for the 
-	<a href="www.koalastothemax.com">Koalas To The Max</a>
-	application. Spike App.
-</p>
+<div class ="center hero-unit">
+	<h1>Spike App</h1>
+	<h2>
+		This is the home page for the 
+		<a href="www.koalastothemax.com">Koalas To The Max</a>
+		application. Spike App.
+	</h2>
+	<%= link_to "Sign up now!", '#', class: "btn btn-large btn-primary" %>
+</div>
+
+<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
